Rename to `iterslide`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
 
-name = "iter-slide"
+name = "iterslide"
 version = "0.0.1"
 authors = ["Santiago Lapresta <santiago.lapresta@gmail.com>"]
