Update license in Cargo.toml as per #1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.0.5"
 authors = ["Santiago Lapresta <santiago.lapresta@gmail.com>"]
 readme = "README.md"
 keywords = ["iterator", "iter", "slide", "sliding", "window"]
-license = "MIT"
+license = "MIT/Apache-2.0"
 homepage = "https://github.com/slapresta/rust-iterslide"
 repository = "https://github.com/slapresta/rust-iterslide"
 description = "A \"sliding window\" iterator."
